made modifications and refactoring to app code

--- a/client/src/components/Cart/cart.css
+++ b/client/src/components/Cart/cart.css
@@ -200,6 +200,7 @@
 .cart-loader p{
     text-align:center;
     font-weight: bold;
+    color:rgb(212, 108, 212);
 }
 @media only screen and (max-width:414px){
     .cart-title{
