--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -4,27 +4,48 @@
 
 .login-err-cont{
       /* border:1px solid black; */
-      width:40%;
+      width:35%;
       margin-left:auto;
       margin-right: auto;
-      margin-top:8px;
+      margin-top:4px;
       /* box-shadow:0 0 5px rgba(117, 116, 116, 0.6); */
-      border-radius: 8px;
+      border-radius: 4px;
      
-      border:1px solid #ccc;
+      
+     
+      border:1px solid rgb(248, 197, 197);
+      background-color:#f8d7da;
+      color:rgb(121, 30, 30);
+      animation-name:animatetop;
+      animation-duration:1s;
 
+}
+@keyframes animatetop{
+    from{
+        right: -12px;
+        opacity:0;
+        transition:all;
+    }
+    to{
+        right:0px;
+        opacity:1;
+        transition:all;
+    }
 }
 .err-login{
     text-align:center;
-    color:red;
+     /* padding:2px; */
+    /* font-family: 'acme';
+    font-weight:bold; */
+    /* color:red; */
 
 }
 
 
 .login-container{
+   
     display:flex;
     flex-direction:column;
-    
     margin:4px;
     background-color:#ffffff;
     padding:4px;
@@ -33,20 +54,23 @@
 
 }
 .login-panel{
+  
     display:flex;
     flex-direction:column;
     width:40%;
-    height:450px;
+    min-height:70vh;
     margin-left:auto;
     margin-right: auto;
-    margin-top:40px;
-    margin-bottom:40px;
+    margin-top:2.5%;
+    margin-bottom:2%;
     position:relative;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
+    /* border:1px solid black; */
+
 
 }
 .login-panel-heading{
-    margin:2px;
+    /* margin:0.5%; */
     /* border:1px solid black; */
     background-color:#ffffff;
     text-align: center;
@@ -54,60 +78,120 @@
 
 }
 .login-panel-body{
-    margin:2px;
+   
+   
+    margin:0.2%;
     /* border:1px solid black; */
     display:flex;
     flex-direction:column;
-    background-color:#ffffff;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height:60vh;
+    /* flex-wrap: wrap; */
+   
+   
+    /* background-color:#ffffff; */
+
+}
+.login-panel-body form{
+    /* border:1px solid black; */
+    width:80%;
+    min-height:40vh;
 
 }
 
+
 .login-form-group{
-    margin-top:15px;
-    margin-bottom:30px;
+    position: relative;
+    font-size: 0.95em;
+    padding-top: 2.5%;
+    margin-top:5%;
+    margin-bottom:5%;
+    /* border:1px solid black; */
+    --transition-duration:0.4s;
+    --draw-color:#222;
+    --draw-line-width:2px;
+    --draw-easing:linear;
+    width:100%;
+    
 }
 
 .login-form-group input{
-    width:65%;
-    height:45px;
-    /* border-radius: 3px; */
-     /* margin-left:auto; */
-    margin-left:85px; 
-    font-size: 1em;
+    
+  
+    border:none;
+    appearance: none;
+    -webkit-appearance:none;
+    -moz-appearance: none;
+    background:#f2f2f2;
+    padding:2.5%;
+    outline:none;
+    width:100%;
+    height:55px;
+    font-size: 0.95em;
     font-family: 'acme';
     font-weight: bold;
-    /* margin:6px; */
-    border-top:0;
-    border-left:0;
-    border-right:0;
-    border-bottom:2px solid rgb(160, 158, 158);
-    /* transition:all 0.3s ease-in-out; */
+    margin-top:0.8%;
+   
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    background:
+    linear-gradient(90deg, #222,#222) center bottom/0 2px no-repeat ,
+    linear-gradient(90deg, #ccc,#ccc) left bottom/100% 2px no-repeat,
+    linear-gradient(90deg, #fafafa,#fafafa) left bottom/100% no-repeat  ;
+    transition: background-size 0.3s ease;
+      /* border:1px solid black; */
 }
+.login-form-group .placeholder{
+    
+    position: absolute;
+    left: 2%;
+    top: calc(70% );
+    transform: translateY(-50%);
+    color:#aaa;
+    transition: 
+    top var(  --transition-duration)  ease,
+    font-size var(  --transition-duration)   ease,
+    color var(  --transition-duration) ease;
+    
+}
+
+.login-form-group input.not-empty + .placeholder,
+.login-form-group  input:focus + .placeholder{
+    top:20px;
+    font-size: 11.5px;
+    color:#222;   
+    /* color:rgb(218, 152, 218); */
+}
+.login-form-group input.not-empty + .placeholder,
+.login-form-group  input:hover + .placeholder{
+  cursor: text;
+}
+
+.login-form-group input.not-empty ,
 .login-form-group input:focus{
-    outline: none;
-    border-top:0px;
-    border-left:0px;
-    border-right:0px;
-    border-bottom:2px solid rgb(218, 152, 218);
+   
+background-size:100% 2px,100% 2px,100% ;
 
 }
-.login-form-group input:hover{
-    border-top:0;
-    border-left:0;
-    border-right:0;
-    border-bottom:2px solid rgb(218, 152, 218);
 
 
+.login-form-group  input::placeholder{
+     color:#222;
+     transition:all var(  --transition-duration)  ease;
 }
+.login-form-group  input:focus::placeholder{
+    color:transparent;
+}
+
 .login-panel button{
-    width:70%;
+    width:100%;
     height: 45px;
-    border:0;
+    border:none;
     background-color: rgb(218, 152, 218);
     position: relative;
     top:30px;
-    left:80px;
+   
     font-size: 1em;
     font-family:'acme';
     font-weight: bold;
@@ -126,7 +210,7 @@
 }
 .signup-link{
     position:relative;
-    top:60px;
+    margin-top:60px;
     text-align:center;
     font-size:0.9em;
 
@@ -153,7 +237,7 @@
 }
 .login-forgot-pass p{
     position: relative;
-    text-align:right;
+    text-align:center;
     /* right:80px; */
    
 }
