--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,9 +37,9 @@ code {
   flex-direction:column;
   /* flex-wrap: wrap; */
   /* border:1px solid black; */
-  margin:9px;
+  margin:0.5%;
   background-color:#ffffff;
-  border-radius:4px;
+  /* border-radius:4px; */
   /* height:320px; */
 
 }
@@ -48,35 +48,41 @@ code {
 
 .sale-items{
   display:flex;
-  /* flex-direction:row; */
+  flex-direction:row;
   justify-content: space-between;
   /* flex-wrap: wrap; */
   flex-wrap: wrap;
-  margin:4px;
-  /* border:1px solid black; */
+  margin:0.4%;
+  /* border:1px solid green; */
   background-color:#ffffff;
 }
-.items-picture{
-margin:6px;
 
+.items-picture{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  margin:0.25%;
   width:15.5%;
-  /* border:1px solid rgb(150, 148, 148); */
-  transition:all 0.3s ease-in-out;
+  
+  border:2px solid rgb(209, 208, 208);
+  /* border:1px solid #242729; */
+  transition:all 0.6s ease;
   cursor:pointer;
   position:relative;
+  border-radius: 3%;
 
 }
 .items-picture img{
-  width: 80%;
-  /* max-width: 100%; */
+  /* border:1px solid green; */
+  width: 100%;
   height: auto;
-  margin-left: 8px;
 }
 
 
 .items-picture:hover{
   /* -webkit-box-shadow:0 0 5px rgba(0,0,0,0.6);
   -moz-box-shadow:0 0 5px rgba(0,0,0,0.6); */
+  border:none;
   box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
   transform:scale(1.03) ;
 
@@ -97,11 +103,11 @@ margin:6px;
 }
 .items-header h3{
   /* border:1px solid black; */
-  padding:6px;
-  height:45px;
+  padding:1%;
+  min-height:45px;
     /* background-color:rgb(218, 152, 218);
     color:#ffffff; */
-  width:18%;
+  min-width:18%;
   text-align:center;
   font-family:'acme';
   /* box-shadow:0 0 5px rgba(117, 116, 116, 0.6); */
@@ -130,6 +136,35 @@ margin:6px;
   .product-text-danger{
     color:blue;
     text-align:center;
+  }
+  /* pagination styles start here */
+  .paginationn {
+    margin: 15px auto;
+    display: flex;
+    list-style: none;
+    outline: none;
+  }
+  .paginationn > .active > a{
+    background-color: #47ccde ;
+    border-color: #47ccde ;
+    color: #fff;
+  }
+  .paginationn > li > a{
+    border: 1px solid #47ccde ;
+    padding: 5px 10px;
+    outline: none;
+    cursor: pointer;
+  }
+  .paginationn > .active > a, .paginationn > .active > span, .paginationn > .active > a:hover, .paginationn > .active > span:hover, .paginationn > .active > a:focus, .paginationn > .active > span:focus{
+    background-color: #47ccde ;
+    border-color: #47ccde;
+    outline: none ;
+  }
+  .paginationn > li > a, .paginationn > li > span{
+    color: #47ccde
+  }
+  .paginationn > li:first-child > a, .paginationn > li:first-child > span, .paginationn > li:last-child > a, .paginationn > li:last-child > span{
+    border-radius: unset
   }
 
 @media only screen  and (max-width:360px){
@@ -168,6 +203,15 @@ margin:6px;
     }
 
  }
+ .product-title{
+  font-weight: bold;
+  font-size:1.1rem;
+}
+.product-price{
+  font-weight: bold;
+  font-size:1.1rem;
+
+}
  
  
 
