--- a/client/src/components/DoubleCollection/doubleCollection.css
+++ b/client/src/components/DoubleCollection/doubleCollection.css
@@ -13,22 +13,27 @@
 
 .six-sale-items{
     display:inline-flex;
+    justify-content: space-between;
     /* flex-direction:row; */  
     flex-wrap: wrap;
-    /* border:1px solid black; */
+    /* border:1px solid orangered; */
     background-color:#ffffff;
   }
 .six{
     /* justify-content: space-between; */
-    min-height:473px;
-      /* border:1px solid black; */
+      min-height:473px;
+      /* border:1px solid blue; */
   }
 
 .items-picture-six{
-
-      margin:6px;
-      width:15.65%;
-      /* border:1px solid rgb(150, 148, 148); */
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      margin:0.25%;
+      width:15.5%;
+      height:auto;
+      border:2px solid rgb(209, 208, 208);
+      border-radius: 3%;
       transition:all 0.3s ease-in-out;
       cursor:pointer;
       position:relative;
@@ -37,44 +42,67 @@
     .items-picture-six:hover{
       /* -webkit-box-shadow:0 0 5px rgba(0,0,0,0.6);
       -moz-box-shadow:0 0 5px rgba(0,0,0,0.6); */
+      border:none;
       box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
       transform:scale(1.03) ;
     
     }
     .view-six{
-        margin-bottom:2px;
-        /* border:1px solid black; */
-      
-        
-        /* height:45px; */
        
-
+        /* border:1px solid red; */
+        width:100%; 
+        position: relative; 
+        margin-bottom: 1%;
+        display: flex;
+      
     }
 
 
 
 .view-six button{
-    background-color:rgb(218, 152, 218);
-    border:0;
-    width:100%;  
-    height: 40px;
-    /* margin-bottom: 9px; */
-    /* margin-left:9px; */
-    cursor:pointer;
-    font-weight: bold;
-    transition:all 0.3s ease-in-out;
+  background-color:rgb(218, 152, 218);
+  border:0;
+  width:100%;  
+  height: 40px;
+  cursor:pointer;
+  position:relative;
+  font-size:1em;
+  font-weight: bold;
+  transition:all 0.3s ease-in-out;
+  font-family: 'acme';
 }
 .view-six button:hover{
     background-color: rgb(212, 108, 212);
 }
+.view-six span{
+  /* width:90%;  */
+  /* border:1px solid black;  */
+  margin-right: auto;
+  margin-left: 4.5%;
+
+}
 .items-six-details{
+  display:flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
      /* border:1px solid black; */
     margin-top: 2px;
     margin-bottom:2px;
-    width:180px;  
+    width:90%; 
+    height:auto; 
     margin-right: auto;
     margin-left: auto;
+    padding:3%;
 
+}
+.items-six-details img{
+  /* border:1px solid green; */
+  width: 100%;
+  height: auto;
+}
+.items-six-details a{
+  text-decoration: none;
+  color:black;
 }
 @media only screen  and (max-width:414px){
     
