--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -14,7 +14,7 @@
 
     display:flex;
     flex-direction: column;
-    /* border:1px solid black; */ 
+    /* border:1px solid blue;  */
     z-index:1;
     position:relative;
     top:0px;
@@ -85,10 +85,7 @@
     }
     .social-list img:hover{
         cursor:pointer;
-        transform:scale(1.05) ;
-
-      
-       
+        transform:scale(1.2);   
     }
 
   
@@ -98,20 +95,19 @@
         display:flex;
         flex-direction:column;    
         /* margin:2px; */
-        height: 100px;
+        min-height: 100px;
         padding:4px;
         /* background-color: rgb(218, 152, 218); */
-        background-color: #242729;
-       
-      
+        background-color: #242729;  
         /* border-radius: 0 0 8px 8px; */
         border-bottom:1px solid #38393a ;
+        /* border:1px solid red;  */
     }
     .search{
         display:flex;
         flex-direction:row;
         justify-content:space-between;
-        flex-wrap:wrap;
+        /* flex-wrap:wrap; */
         background-color: #242729;
         /* background-color:rgb(218, 152, 218); */
         /* align-items: stretch; */
@@ -124,32 +120,36 @@
     
     }
     .logo{
-        /* border:1px solid black; */
+        /* border:1px solid green;  */
         padding:5px;
     
     }
-    .search-bar{
-       
-    
+    .search-bar{ 
+        display:flex;
+        justify-content: center;        
         margin-bottom:2px;
-    
         padding:5px;
+        /* border:1px solid green; */
+        width:60%; 
     
     }
-    
-    
+    .search-bar form{
+        /* border:1px solid green; */
+        width:80%; 
+
+    }
+       
     .search-bar form input[type="search"]{
        
         font-size:0.9em;
         text-transform:lowercase;
         /* background-color:rgb(218, 152, 218); */
         background-color: #242729;
-      
+        outline:none;
         padding:3px;
-        width:500px;
+        width:85%;
         height:40px;
         color:rgb(218, 152, 218); 
-      
         border-radius:5px;
         margin-right:0.2rem;
         border:2px solid #38393a; 
@@ -159,21 +159,20 @@
     
        
     }
-    .search-bar form input[type="search"]:focus{
-      
+    .search-bar form input[type="search"].not-empty,
+    .search-bar form input[type="search"]:focus{  
         /* background-color:#ccc; */
-        border-radius:4px;
-        /* color:black; */
-        
+        border-radius:4px;    
         font-family:'abel';
         border:2px solid rgb(218, 152, 218) ;
+        transition-delay: 0.1s;
         /* color: rgb(218, 152, 218); */
     }
     .search-bar form button{
         cursor:pointer;
         padding:3px;
         
-        width:74px;
+        width:12%;
         height:39px;
         /* background-color:rgb(218, 152, 218); */
         background-color: #242729;
@@ -193,6 +192,30 @@
         /* color:rgb(218, 152, 218); */
      
     }
+    .search-results{
+
+    position: absolute;
+    /* left: 2%; */
+    top: calc(70% );
+    /* transform: translateY(-50%); */
+    color:#aaa;
+    transition: 
+    top var(  --transition-duration)  ease,
+    font-size var(  --transition-duration)   ease,
+    color var(  --transition-duration) ease;
+     border:1px solid white;
+    
+     width:500px;
+     background-color:white;
+     height:80%;
+      border:1px solid black;
+      display:flex;
+      flex-direction: column;
+
+    }
+    .search-results p{
+        color:black;
+    }
     .header-login{
         display:flex;
         flex-direction: row;
@@ -206,7 +229,7 @@
     .login{
         /* display:flex; */
        
-        /* border:1px solid black; */
+        /* border:1px solid green;  */
        
         padding:8px;
         transition:all 0.5s ease-in-out;
@@ -319,7 +342,8 @@
 
 }
 .main-navigation{
-    display:block;
+    display:flex;
+    flex-direction: column;
     height:100%;
     width:0;
     position:fixed;
@@ -370,4 +394,113 @@
        .search-bar-form{
            display:none;
        }
+}
+@media only screen  and (max-width:910px){
+    .gifs-bar {
+        display:none;
+       }
+   
+
+    .header-container{
+        display:flex;
+        flex-direction: column;
+        position:sticky;
+        top:0;
+        z-index:1;
+        }
+    
+    .top-nav-bar{
+        height: 65px;
+        padding:4px;
+        border-radius:0 0 0 0;
+    }
+    /*  */
+    .logo{
+        margin-top:5px;
+    
+    }
+    .login{
+        display:none;
+    }
+    #sign-up-link{
+        display:block;
+    }
+    .main-navigation .closebtn{
+        display:flex;
+        position:absolute;
+        justify-content: flex-end;
+        top:3%;
+        /* right:30px; */
+        font-size:36px;
+        margin-left:83%;
+        color:white;
+    
+    }
+    .main-navigation{
+        display:flex;
+        flex-direction: column;
+        height:100vh;
+        width:0;
+        position:fixed;
+        z-index:1;
+        top:0;
+        left:0;
+        background-color:rgb(218, 152, 218);
+        /* background-color:rgb(116, 110, 110); */
+        overflow-x:hidden;
+        transition:0.6s;
+        padding-top:60px;
+      
+    }
+    .main-navigation a{
+        /* float:none; */
+        display:flex;
+        color:white;
+        font-size:18px;
+        /* text-align:center; */
+    
+    }
+    
+    .nav-open-icon{
+        
+        margin-top:-43px;
+        color:rgb(218, 152, 218);
+       display:inline-flex;
+       align-self: flex-end;
+       /* margin-left:335px; */
+       /* border:1px solid black; */
+       width:35px;
+       
+    }
+    .closebtn{
+        cursor: pointer;
+        border:none;
+        color:white;
+        z-index:-1;
+        background-color:rgb(218, 152, 218);
+    
+    }
+}
+@media only screen  and (min-width:910px){
+    .main-navigation{
+        display:flex;
+        flex-direction:row;
+        justify-content: space-between;
+        flex-wrap:wrap;
+        position:relative;      
+        height:0%;
+    }
+
+    .main-navigation a{
+        text-decoration:none;
+        color:rgb(218, 152, 218);
+        /* border: 1px solid #ffffff; */
+          padding:12px;
+          font-weight:bold;
+          font-size:0.9em;
+          font-family:'acme';
+          transition:all 0.3s ease-in-out;
+    
+    }
+
 }
