--- a/client/src/components/Loader/loader.css
+++ b/client/src/components/Loader/loader.css
@@ -8,26 +8,31 @@
               /* style for loader starts here */
               .loader-container{
 
-                /* width:80%; */
+                width:100%;
+                min-height:40px;
                 /* margin-left:auto;
                 margin-right:auto; */
                 display:flex;
                 border:0;
-                justify-content: flex-end;
+                /* justify-content: flex-end; */
+                justify-content: center;
                 position:relative;
                 top:0;
-                background-color: #ffffff;
+                background-color: #fff;
+                /* margin-top:6px; */
                 /* display:none; */
+                /* border:1px solid black; */
 
               }
               .loader {
+                 margin:16px;
                   
-                border: 5px solid #f3f3f3;
+                border: 6px solid #f3f3f3;
                 border-radius: 50%;
-                border-top: 5px solid rgb(218, 152, 218);
-                border-bottom: 5px solid rgb(218, 152, 218);
-                width: 30px;
-                height: 30px;
+                border-top: 6px solid rgb(218, 152, 218);
+                border-bottom: 6px solid rgb(218, 152, 218);
+                width: 40px;
+                height: 40px;
                 -webkit-animation: spin 2s linear infinite;
                 animation: spin 2s linear infinite;
               }
