--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -99,8 +99,7 @@
     }
     
     .search .nav-link-active{
-        background-color: #ccc;
-        color:#242729;
+        border-bottom:4px solid rgb(218, 152, 218);
 
     }
 
@@ -204,13 +203,12 @@
         padding:12px;
         font-weight:bold;
         font-family:'acme';
-        transition:all 0.3s ease;   
+        transition:all 0.1s ease;
+        outline:none;   
     }
 
     .login:hover a{
-          background-color:#ccc;      
-
-        color:#242729;        
+        border-bottom:4px solid rgb(218, 152, 218);     
     }
 
     .main-navigation{
@@ -218,8 +216,8 @@
         flex-direction:row;
         justify-content: space-between;
         flex-wrap:wrap; 
-        /* position: relative;
-        top:5px;      */
+        position: relative;
+        top:5px;     
         /* border:1px solid white;       */
     }
 
@@ -228,30 +226,43 @@
           color:rgb(218, 152, 218);
           padding:12px;
           font-weight:bold;
-          font-size:0.9em;
+          font-size:0.99em;
           font-family:'acme';
-          transition:all 0.3s ease-in-out;
+          transition:all 0.1s ease;
+          outline:none;
     
     }
   
     .main-navigation a:hover{
-        background-color: #ccc;
-        color:#242729;
+        /* background-color: #ccc; */
+        /* color: #ccc; */
+        border-bottom:4px solid rgb(218, 152, 218);
+       
     }
 
     .main-navigation> .nav-link-active{
-    background-color: #ccc;
-     color:#242729;
+    /* background-color: #ccc; */
+     /* color:#242729; */
+     border-bottom:4px solid rgb(218, 152, 218);
       
     }
-    
-.nav-open-icon{  
-    display:none; 
- }
+    .nav-open-icon{
+     
+       display:none;
+           
+    }
+    .closebtn{
+        background-color: #242729;
+        border:none;
+        outline: none;
+        margin-right:2%;
+        font-size:2rem;
 
-.main-navigation .closebtn{
-   display:none;
-}
+    }
+    
+
+
+
 
 .nav-text{
     margin-left:2px;
@@ -260,90 +271,9 @@
     display:none;
 }
 
-@media only screen  and (max-width:414px){
-    
-  .header-container{
-    display:flex;
-    flex-direction: column;
-    position:sticky;
-    top:0;
-    z-index:1;
-    }
 
-.top-nav-bar{
-    height: 65px;
-    padding:4px;
-    border-radius:0 0 0 0;
-}
-/*  */
-.logo{
-    margin-top:5px;
 
-}
-.login{
-    display:none;
-}
-#sign-up-link{
-    display:block;
-}
-.main-navigation .closebtn{
-    display:flex;
-    position:absolute;
-    justify-content: flex-end;
-    top:3%;
-    /* right:30px; */
-    font-size:36px;
-    margin-left:83%;
-    color:white;
 
-}
-.main-navigation{
-    display:flex;
-    flex-direction: column;
-    height:100%;
-    width:0;
-    position:fixed;
-    z-index:1;
-    top:0;
-    left:0;
-    background-color:rgb(218, 152, 218);
-    overflow-x:hidden;
-    transition:0.6s;
-    padding-top:60px;
-  
-}
-.main-navigation a{
-    display:flex;
-    color:white;
-    font-size:18px;
-}
-
-.nav-open-icon{
-    margin-top:-43px;
-    color:rgb(218, 152, 218);
-   display:inline-flex;
-   align-self: flex-end;
-   width:35px;
-   
-}
-.closebtn{
-    cursor: pointer;
-    border:none;
-    color:white;
-    z-index:-1;
-    background-color:rgb(218, 152, 218);
-
-}
-}
-
-@media only screen  and (max-width:414px){
-    .gifs-bar {
-        display:none;
-       }
-       .search-bar-form{
-           display:none;
-       }
-}
 @media only screen  and (max-width:910px){
     .gifs-bar {
         display:none;
@@ -362,6 +292,11 @@
         padding:4px;
         border-radius:0 0 0 0;
     }
+    .main-navigation{
+        display:none;
+       
+      
+    }
 
     .logo{
         margin-top:5px;
@@ -372,51 +307,18 @@
     #sign-up-link{
         display:block;
     }
-    .main-navigation .closebtn{
-        display:flex;
-        position:absolute;
-        justify-content: flex-end;
-        top:3%;
-        font-size:36px;
-        margin-left:83%;
-        color:white;
-    
-    }
-    .main-navigation{
-        display:flex;
-        flex-direction: column;
-        height:100vh;
-        width:0;
-        position:fixed;
-        z-index:1;
-        top:0;
-        left:0;
-        background-color:rgb(218, 152, 218);
-        overflow-x:hidden;
-        transition:0.6s;
-        padding-top:60px;
-      
-    }
-    .main-navigation a{
-        display:flex;
-        color:white;
-        font-size:18px;
-    }
+  
+   
+   
     
     .nav-open-icon{
-        margin-top:-43px;
+        margin-top:-4%;
         color:rgb(218, 152, 218);
        display:inline-flex;
        align-self: flex-end;
        width:35px;   
     }
-    .closebtn{
-        cursor: pointer;
-        border:none;
-        color:white;
-        z-index:-1;
-        background-color:rgb(218, 152, 218);
-    }
+  
 }
 @media only screen  and (min-width:910px){
     .main-navigation{
@@ -441,3 +343,49 @@
     } */
 
 }
+@media only screen  and (max-width:414px){
+    
+    .header-container{
+      display:flex;
+      flex-direction: column;
+      position:sticky;
+      top:0;
+      z-index:1;
+      }
+      .gifs-bar {
+          display:none;
+         }
+         .search-bar-form{
+             display:none;
+         }
+  .top-nav-bar{
+      height: 65px;
+      padding:4px;
+      border-radius:0 0 0 0;
+  }
+  /*  */
+  .logo{
+      margin-top:5px;
+  
+  }
+  .login{
+      display:none;
+  }
+  
+  .main-navigation{
+      display:none;
+      
+  }
+  
+  
+  .nav-open-icon{
+      margin-top:-7%;
+      color:rgb(218, 152, 218);
+     display:inline-flex;
+     align-self: flex-end;
+     width:35px;
+    
+     
+  }
+  
+  }
