--- a/client/src/components/SignupPage/signup.css
+++ b/client/src/components/SignupPage/signup.css
@@ -4,7 +4,13 @@
 
 
 
-
+.form-row{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /* border:1px solid black; */
+    width:100%;
+}
 
 .signup-err-cont{
 
@@ -39,13 +45,14 @@
     background-color:#ffffff;
     /* background-color: #ccc; */
     padding:4px;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 .signup-form-panel{
+    /* border:1px solid black; */
     display:flex;
     flex-direction:column;
-    width:40%;
-    min-height:100vh;
+    width:45%;
+    min-height:55vh;
     margin-left:auto;
     margin-right: auto;
     position:relative;
@@ -64,7 +71,7 @@
 
 }
 .signup-form-panel-body{
-    min-height:110vh;
+    min-height:55vh;
     margin:2px;
     /* border:1px solid black; */
     display:flex;
@@ -76,8 +83,8 @@
 }
 .signup-form-panel-body form{
     /* border:1px solid black; */
-    width:80%;
-    min-height:85vh;
+    width:90%;
+  
 
 }
 .signup-form-group{
@@ -86,13 +93,12 @@
     padding-top: 2%;
     /* margin-top:5%; */
     margin-bottom:5%;
-    /* border:1px solid black; */
+    /* border:1px solid red; */
+    width:40%;
     --transition-duration:0.3s;
     --draw-color:#222;
     --draw-line-width:2px;
     --draw-easing:linear;
-   
-
 }
 
 .signup-form-group input{
@@ -104,7 +110,6 @@
     /* background:#f2f2f2; */
     padding:12px;
     border-radius: 3px;
-   
     outline:none;
     width:100%;
     height:49px;
@@ -181,8 +186,11 @@
 
 } */
 .signup-bttn{
-     border:1px solid black;
-       margin-top:15%;  
+     /* border:1px solid black; */
+     width:50%;
+       margin-left:auto;  
+        margin-right:auto; 
+        margin-top:5% 
     
 }
 .signup-form-panel button{
@@ -191,21 +199,29 @@
     border:0;
     background-color: rgb(218, 152, 218);
     position: relative;
-    /* top:24px;   */
-   
     font-weight: bold;
-    transition:all 0.5s ease-in-out;
+    transition:all 0.3s ease;
     font-size: 1em;
     font-family:'acme';
     color:#ffffff;
+    /* color:#292b2c; */
 }
 .signup-form-panel button:hover{
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1;
+    color:rgb(218, 152, 218); */
+    /* border:2px solid rgb(218, 152, 218); */
+    background-color:#292b2c;
     color:rgb(218, 152, 218);
-    border:2px solid rgb(218, 152, 218);
     cursor:pointer;
-    text-decoration:underline;
+    /* text-decoration:underline; */
 
+}
+@media only screen  and (max-width:910px){
+    .signup-form-panel{       
+        width:90%; 
+        top:30px;        
+    }
+  
 }
 @media only screen  and (max-width:414px){
     .signup-form-container{   
