--- a/client/src/components/SeeAllPage/seeAll.css
+++ b/client/src/components/SeeAllPage/seeAll.css
@@ -18,9 +18,10 @@
       margin:0.25%;
       width:15.5%;
       height:auto;
-      border:2px solid rgb(209, 208, 208);
-      border-radius: 3%;
-      transition:all 0.3s ease-in-out;
+      /* border:2px solid rgb(209, 208, 208); */
+      box-shadow:0 0 6px rgb(196, 195, 195);
+      /* border-radius: 3%; */
+      transition:all 0.3s ease;
       cursor:pointer;
       position:relative;
   }
@@ -30,7 +31,7 @@
     -moz-box-shadow:0 0 5px rgba(0,0,0,0.6); */
     border:none;
     box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
-  transform:scale(1.03) ;
+  /* transform:scale(1.03) ; */
 }  
 .see-all-items-details{
   display:flex;
