--- a/client/src/components/MenCollectionPage/menCollection.css
+++ b/client/src/components/MenCollectionPage/menCollection.css
@@ -12,7 +12,6 @@
     display:flex;
     flex:1;
     justify-content:center;
-    border-bottom:2px solid grey;
     background-color:#ffffff;
     color:black;
     margin-bottom:2px;
@@ -21,9 +20,7 @@
 }
   
   .men-collections-items-container{
-    margin-left:auto;
-    margin-right:auto;
-    width:98%;
+    padding:0.25%;
     display:flex;
     flex-direction: column;
     background-color:#ffffff;
@@ -34,5 +31,8 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content:space-between;
+   
+    margin-top:0.3%;
     /* border:1px solid black; */
   }
