--- a/client/src/components/PopularCollectionPage/popularCollection.css
+++ b/client/src/components/PopularCollectionPage/popularCollection.css
@@ -2,30 +2,28 @@
 
 
 
-.popular-collections-items{
+/* .popular-collections-items{
     display:flex;
     flex-direction:column;
-    justify-content:space-between;
+   
     
-  }
+  } */
 
   .popular-collections-items-header{
    
     display:flex;
     flex:1;
     justify-content:center;
-    border-bottom:2px solid grey;
+    /* border-bottom:2px solid grey; */
     background-color:#ffffff;
     color:black;
-    margin-bottom:2px;
+    margin-bottom:0.15%;
   
   
 }
   
   .popular-collections-items-container{
-    margin-left:auto;
-    margin-right:auto;
-    width:98%;
+    padding:0.25%;
     display:flex;
     flex-direction: column;
       background-color:#ffffff;
@@ -36,5 +34,7 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content:space-between;
+     margin-top:0.3%;
     /* border:1px solid black; */
   }
