--- a/client/src/components/WomenCollectionPage/womenCollection.css
+++ b/client/src/components/WomenCollectionPage/womenCollection.css
@@ -2,18 +2,14 @@
 
 
  
-.women-collections-items{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-  }
+
 
   .women-collections-items-header{
  
     display:flex;
     flex:1;
     justify-content:center;
-    border-bottom:2px solid grey;
+    /* border-bottom:2px solid grey; */
     background-color:#ffffff;
     color:black;
     margin-bottom:2px;
@@ -22,9 +18,7 @@
 }
   
   .women-collections-items-container{
-    margin-left:auto;
-    margin-right:auto;
-    width:98%;
+    padding:0.25%;
     display:flex;
     flex-direction: column;
     background-color:#ffffff;
@@ -35,5 +29,6 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
+      justify-content:space-between;
     /* border:1px solid black; */
   } 
